# Kinect_mocap

./: README.md
send_position/ROS/skeleton_listener/: CMakeLists.txt
send_position/ROS/skeleton_listener/msg/: Skeleton.msg
send_position/ROS/skeleton_listener/src/: listener.cpp
send_position/ROSonWindows/skeleton_sender/msg/: Skeleton.msg
send_position/ROSonWindows/skeleton_sender/src/: Skel_data.h  skeleton_sender.cpp
send_position/windows/: NtKinect.h  Skel_data.h  joint_ext.cpp
send_with_gesture/ROS/: CMakeLists.txt  Skeleton.msg  markers.launch  markers_from_skeleton_msg.py
send_with_gesture/ROS/skeleton_listener/: package.xml
send_with_gesture/ROS/skeleton_listener/src/: listener.cpp
send_with_gesture/ROS/skeleton_listener_wges/: CMakeLists.txt  package.xml  스크린샷, 11-16-2020 09:54:21 AM.webm
send_with_gesture/ROS/skeleton_listener_wges/msg/: Skeleton.msg
send_with_gesture/ROS/skeleton_listener_wges/src/: listener.cpp
send_with_gesture/ROS/skeleton_markers/: listened_gesture.cpp  marker_params.yaml  package.xml
send_with_gesture/ROSonWindows/: CMakeLists.txt  package.xml
send_with_gesture/ROSonWindows/msg/: Skeleton.msg
send_with_gesture/ROSonWindows/src/: Skel_data.h  Skel_data_wges.h  skeleton_sender.cpp  skeleton_sender_wges.cpp
send_with_gesture/windows/: NtKinect.h  SitAndStand.gbd  Skel_data.h  VEROSIM_1.gbd  VEROSIM_1P.gbd  VEROSIM_2P.gbd  VEROSIM_5.gbd  extSkeleton.cpp  joint_ext_wges.cpp
